Fix misalignment

--- a/assets/css/edd-admin.css
+++ b/assets/css/edd-admin.css
@@ -107,7 +107,7 @@ textarea#edd-payment-note { width: 100%; height: 4em; margin: 0; }
 #edd-edit-order-form .column,
 #edd-purchased-files .row > ul > li,
 #edd-purchased-files .inside > ul > li { display: inline-block; position: relative; vertical-align: top; }
-#edd-purchased-files li.actions { margin-top: 14px; text-align: right; }
+#edd-purchased-files li.actions { text-align: right; }
 #edd-purchased-files ul li.remove { text-align: right; }
 #edd-purchased-files .row { padding: 12px; border-bottom: 1px solid #eee; }
 #edd-purchased-files ul { font-size: 0; }
@@ -126,7 +126,7 @@ textarea#edd-payment-note { width: 100%; height: 4em; margin: 0; }
 	#edd-purchased-files.columns-4 li.download { width:33%; }
 	#edd-purchased-files.columns-4 li.price,
 	#edd-purchased-files.columns-3 .row > ul > li.price,
-	#edd-purchased-files.columns-3 .inside > ul > li.price { width:13%; }
+	#edd-purchased-files.columns-3 .inside > ul > li.price { width:14%; }
 	#edd-purchased-files.columns-4 li.actions { width: 25%; margin-top: 0; margin-right: 0; }
 }
 #edd-order-data .data span { color: #666; font-weight: 600; }
